# VULNIX

./: .gitignore  Phases.md  README.md  api-data.txt  implementation_plan.md.resolved  test-api.py
backend/: README.md  cves.db  pyproject.toml  requirements.txt
backend/app/: README.md  api.py  crud.py  database.py  main.py  models.py  nvd_fetcher.py  sync_service.py  test_database.py  utils.py
backend/tests/: README.md  test_nvd_fetcher.py  test_sync_service.py
frontend/: README.md  api.js  app.js  components.js  index.html  style.css
